fix: sprint 4.2 , теперь используются интерфейсы в качестве ссылки.